--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -98,10 +98,10 @@ Last Update: 20-07-2024
 }
 
 :root {
-    --theme-color: #91dfff;
-    --primary-color: #91dfff;
+    --theme-color: #009dc4;
+    --primary-color: #009dc4;
     --title-color: #113d48;
-    --body-color: #87ceeb;
+    --body-color: #2a9dca;
     --smoke-color: #e9f6f9;
     --smoke-color2: #f3f4f6;
     --black-color: #000000;
