front dynamic with backend

--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -98,7 +98,7 @@ Last Update: 20-07-2024
 }
 
 :root {
-    --theme-color: #009dc4;
+    --theme-color: #87CEEB;
     --primary-color: #009dc4;
     --title-color: #113d48;
     --body-color: #2a9dca;
